--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://eSh-f.github.io/todo-app",
+  "homepage": "https://esh-f.github.io/todo-app",
   "name": "todoapp",
   "version": "0.1.0",
   "private": true,
